force-app/main/default/objects/Movie__c/fields/isMovieFinished__c.field-meta.xml
<CustomField>
    <fullName>isMovieFinished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMovieFinished</label>
    <type>Checkbox</type>
</CustomField>