force-app/main/default/objects/Movie__c/fields/Movie_Description__c.field-meta.xml
<CustomField>
    <fullName>Movie_Description__c</fullName>
    <label>Movie Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>