force-app/main/default/objects/Movie__c/fields/Movie_Image__c.field-meta.xml
<CustomField>
    <fullName>Movie_Image__c</fullName>
    <label>Movie Image</label>
    <type>Url</type>
</CustomField>