force-app/main/default/objects/Movie__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>isMovieFinished__c</columns>
    <columns>Movie_Image__c</columns>
    <columns>Movie_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>